--- a/app/asset/css/main.css
+++ b/app/asset/css/main.css
@@ -19,379 +19,25 @@ body {
   padding-bottom: 6rem;
   min-height: 100%;
   font-family: 'Roboto', sans-serif;
-  /*font-family: "Helvetica Neue", Arial, sans-serif;*/
-  background-color: #f5f6f7;
-}
-a.home-img{
-	height: 200px;
-	width: 400px;
-}
-/*body{
-	background: #f5f6f7;
-}*/
-
-
-.btn-contact{
-	width: 100%;
-}
-.list-group-item{
-	font-size: 15px;
-}
-
-.home{
-	padding-top: 30px;
-}
-
-.sidebar-left{
-	background: url('http://cdn.optimizely.com/img/698392373/f87390e7df0a42ed956e890441c5a652.jpg') no-repeat center center;
-}
- /*---------------Scrollbar-------------------*/
-.sidebar-right{
-	/*margin-left: 20px;*/
-    padding-top: 50px;
-    overflow-y: scroll;
-    /*overflow: hidden;*/
-    overflow-x: hidden;
-    height: 768px;
-}
-
-/*----------FILTER & SELECT------------*/
-.search{
-	display: flex;
-  	justify-content: center;
-  	align-items: center;
-  	height: 768px;
-}
-.filter-houses{
-	margin-top: 20px;
- }
-.select-filter{
-	margin-top: 10px;
-}
-/*----------FILTER & SELECT------------*/
-
-/*-------------Deatail-form---------*/
-.detail-description{
-	color: #000;
-	font-size: 15px;
-}
-
-.detail-article{
-	font-size: 16px;
-}
-/*-------------Deatail-form---------*/
-
-.info{
-	/*background: rgba(0, 0, 0, 0.3);*/
-	color: green;
-}
-img.seller{
-	width: 60px;
-	height: 60px;
-
-}
-ul.seller{
-	width: 120px;
-}
-img.seller,
-ul.seller{
-	float: left;
-}
-/*-----------HOUSES-LIST-----------*/
-
-.houses{
-	padding-top: 30px;
-}
-
-.sortHouse{
-	margin-left: 40%
-}
-
-strong{
-	color: #0095da;
-}
-
-.thumbnail{
-	border-radius: 0px;
-}
-
-/*-----------HOUSES-LIST-----------*/
-.msg-block {
-    margin-top:5px;
-}
-.msg-error {
-    color:#F00;
-    font-size:14px;
-}
-.neighbor{
-	color: green;
-	font-size: 13px;
-}
-
-#exam_wrapper{
-    color: #2b2b2b;
-    font-size: 16px;
-}
-table.dataTable>tbody>tr.child span.dtr-title {
-    min-width: 85px !important;
 }
 
 
-/* tr.column_name{
-    font-weight: bold;
-    font-size: 18px;
-}
-tr.header{
-    font-weight: bold;
-    font-size: 25px;
-    color: gray;
-} */
-
-tr.houseInfo{
-	font-size: 15px;
-}
-.house-detail{
-	margin-top: 15px;
-}
-.ownerInfo{
-	font-size: 13px;
-	color: #091a2e;
-}
-.img-agent{
-	margin-bottom: 15px;
+.map-detail{
+    background-color: #f5f6f7;
+    padding: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)!important;
 }
 
-/* ---------UTITLITIES NEAR THE HOUSE--------- */
-
-.school_name,
-.distance{
-	color: green;
-	font-weight: bold;
-}
-.distance{
-	padding-left: 10px;
-} 	
-.span-extend {
-	float: right;
-	padding-left: 25px;
-	cursor: pointer;
-}
-
-md-slider{
-    display: inline-block;
-    padding-left: 10px;
-    height: 30px;
+.input-form{
+    padding: 5px;
+    border-color: #d2e3ae;
+    border-radius: 4px;
+    margin: 5px;
     width: 300px;
 }
 
-.map-neighbor > .angular-google-map > .angular-google-map-container{
-    height: 396px;
-}
-.map-utility > .angular-google-map > .angular-google-map-container{
-    height: 500px;
-}
-.map-estimate > .angular-google-map > .angular-google-map-container{
-    height: 550px;
-}
- .angular-google-map-container {
-    width: 100%;
-    height: 500px;
-} 
-.map-marker{
-	padding-top: 25px;
-	padding-bottom : 25px; 
-}
-
-.utilitySelect{
-	width: 100%;
-	font-size: 15px;
-	font-weight: bold;
-	padding : 10px;
-	border-radius: 5px;
-	border : solid 2px green;
-}
-
-.marker_labels{
-	font-size: 13px;
-	font-weight: bold;
-	font-style: italic;
-	color: #00f;
-	border-radius: 10px;
-	padding : 10px;
-	margin: auto;
-    overflow: visible;
-}
-
-.div-map{
-	background-color: #093;
-	border-radius: 10px;
-    z-index: 1000;
-    display: block;
-    opacity: 1;
-}
-.table-map,
-.p-map{
-	overflow: initial;
-	color: #fff;
-	padding: 5px 10px;
-	margin-bottom : 0px;
-}
-
-.map-detail{
-    padding: 0px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)!important;
-}
-
-label{
-	display: inline;
-}
-.radius-form{
-	font-size: 13px;
-	font-weight: bold;
-    padding-bottom: 10px;
-    padding-top: 5px;
-    color: #19C662;
-}
-input[type='radio'].radius-radio{
-	margin-left: 5px;
-	margin-right: 5px;
-}
-/* ---------END OF UTITLITIES NEAR THE HOUSE--------- */
-
-
-
-/*-------------ESTIMATE THE HOUSE------------*/
-.table-estimate{
-	font-size: 15px;
-}
-.panel-green{
-	background: #19C662;
-    color: #fff;
-}
-.panel{
-	border-color: #bcd4d4;
-}
-.table>tbody>tr>th {
-        vertical-align: middle;
-}
-.a-estimate:hover,
-.a-estimate,
-.span-percent{
-	text-decoration: none;
-	color: green;
-}
-
-.home-image{
-    width:100%; 
-    height: 200px; 
-}
-.row-suggest{
-    padding-left : 15px !important;
-    padding-right: 15px !important;
-    padding-top: 30px;
-}
-.title-suggest{
-    padding-left: 8px;
-    padding-right: 15px;
-    color : #19C662;
-}
-.suggest{
-    padding: 8px !important;
-}
-
-.house-suggest { 
-   position: relative; 
-   width: 100%; /* for IE 6 */
-   height: 200px;  
-}
-
-.house-detail-suggest{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.45); 
-    
-}
-
-.house-detail-info-suggest{
-    position: absolute;
-    bottom: 0;
-    left: 25px;
-}
-
-.house-detail-info-suggest > h4, p.h6{
-    color: #fff;
-}
-.price-detail-estimate{
-    background: #fbfbfb;
-    border-radius: 10px;
-    margin-top: 30px;
-}
-
-.red{
-    color: red;
-}
-.green{
-    color: green;
-}
-/*-------------END OF ESTIMATE THE HOUSE------------*/
-
-/*-------------FORM-CONTACT, FORM-ADD-POST------------*/
-
-.form-add-post{
-    padding: 25px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)!important;
-}
-.titleSelected{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)!important;
-    background-color: #f5c952;
-}
-.title-add-post{
-    padding: 15px;
-    /*box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)!important;*/
-}
-.title-add-post:hover{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)!important;
-    background-color: #f5c952;
-}
-.title-add-post:active{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)!important;
-}
-.form-contact{
-    box-shadow: 0px 2px 2px 1px green;
-    border: 1px solid red;
-    background-color: #fdebb9;
-    border-radius: 4px;
-}
-
-.input-contact{
-    padding: 10px;
-    border-color: #C5CEFD;
-    display: inherit;
-    margin: 5px;
-    border-radius: 3px;
-    width: 400px;
-}
-
-.input-contact:focus{
-    border-color: yellow;
-}
-
-/*-------------FORM-CONTACT------------*/
-
-.house-for{
-	padding-top: 60px;
-    padding-right: 0px;
-    padding-left: 0px;
-}
-
-
-.carousel-inner > .item > .img-carousel,
-.img-unknown{
-	height: 400px;
-	width: auto;
-    margin: 0 auto;
+.h3-title{
+    color: #f05424;
 }
 
 /*------------------NAVBAR---------------------*/
@@ -470,282 +116,18 @@ a.nav:hover{
 /*------------------END-NAVBAR---------------------*/
 
 
-/*------------------FOOTER----------------------*/
-.footer{
-	position: absolute;
-	right: 0;
-	/*bottom: 0;*/
-	left: 0;
-	text-align: center;
-}
-/*------------------FOOTER----------------------*/
-
-
-/*------------------USER-INFO----------------------*/
-.user-row {
-    margin-bottom: 14px;
-}
-
-.user-row:last-child {
-    margin-bottom: 0;
-}
-
-.dropdown-user {
-    margin: 13px 0;
-    padding: 5px;
-    height: 100%;
-}
-
-.dropdown-user:hover {
-    cursor: pointer;
-}
-
-.table-user-information > tbody > tr {
-    border-top: 1px solid rgb(221, 221, 221);
-}
-
-.table-user-information > tbody > tr:first-child {
-    border-top: 0;
-}
-
-
-.table-user-information > tbody > tr > td {
-    border-top: 0;
-}
-.toppad{margin-top:20px;
-}
-
-/*------------------USER-INFO----------------------*/
-
-/*------------------USER-LOGIN----------------------*/
-.logo {
-    width: 213px;
-    height: 36px;
-    background: url('http://i.imgur.com/fd8Lcso.png') no-repeat;
-    margin: 30px auto;
-}
-
-.login-block {
-    width: 400px;
-    padding: 20px;
-    border-radius: 5px;
-    margin: 0 auto;
-}
-
-.login-block h1 {
-    text-align: center;
-    color: #000;
-    font-size: 18px;
-    text-transform: uppercase;
-    margin-top: 0;
-    margin-bottom: 20px;
-}
-
-.login-block input {
-    width: 100%;
-    height: 42px;
-    box-sizing: border-box;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    margin-bottom: 20px;
-    font-size: 14px;
-    font-family: Montserrat;
-    padding: 0 20px 0 50px;
-    outline: none;
-}
-
-.login-block input#username {
-    background: #fff url('http://i.imgur.com/u0XmBmv.png') 20px top no-repeat;
-    background-size: 16px 80px;
-}
-
-.login-block input#username:focus {
-    background: #fff url('http://i.imgur.com/u0XmBmv.png') 20px bottom no-repeat;
-    background-size: 16px 80px;
-}
-
-.login-block input#password {
-    background: #fff url('http://i.imgur.com/Qf83FTt.png') 20px top no-repeat;
-    background-size: 16px 80px;
-}
-
-.login-block input#password:focus {
-    background: #fff url('http://i.imgur.com/Qf83FTt.png') 20px bottom no-repeat;
-    background-size: 16px 80px;
-}
-
-.login-block input:active, .login-block input:focus {
-    border: 1px solid #ff656c;
-}
-
-.login-block button {
-    width: 100%;
-    height: 40px;
-    background: #ff656c;
-    box-sizing: border-box;
-    border-radius: 5px;
-    border: 1px solid #e15960;
-    color: #fff;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 14px;
-    font-family: Montserrat;
-    outline: none;
-    cursor: pointer;
-}
-
-.login-block button:hover {
-    background: #ff7b81;
-}
-
-/*------------------USER-LOGIN----------------------*/
-
-/*------------------BACKTOTOP----------------------*/
-.goToTop{
-    background-position: 50% 50%;
-    bottom: 30px;
-    border-radius: 50%;
-    box-shadow: rgba(0, 0, 0, 0.0470588) 0px 0px 10px 0px;
-    box-sizing: border-box;
-    color: rgb(232, 98, 86);
-    display: block;
-    height: 60px;
-    position: fixed;
-    right: 20px;
-    text-decoration: none;
-    text-indent: 100%;
-    white-space: nowrap;
-    width: 60px;
-    z-index: 10;
-    perspective-origin: 30px 30px;
-    transform-origin: 30px 30px;
-    background: rgba(232, 98, 86, 0.7) url("https://codyhouse.co/demo/back-to-top/img/cd-top-arrow.svg") no-repeat scroll 50% 50% / auto padding-box border-box;
-    border: 0px none rgb(232, 98, 86);
-    font: normal normal normal normal 16px / 16px Bitter, sans-serif;
-    outline: rgb(232, 98, 86) none 0px;
-    overflow: hidden;
-    transition: opacity 0.3s ease 0s, visibility 0s ease 0s;
-}
-
-/*------------------BACKTOTOP----------------------*/
-
-/*------------------USER-REGISTER----------------------*/
-
-.registerTable{
-    margin: 0px auto;
-}
-.registerTable td {
-    padding-bottom: 15px;
-}
-
-.register-block{
-    width: 520px;
-    background: #fff;
-    border-radius: 5px;
-    border-top: 5px solid #ff656c;
-    margin: 30px auto;
-     box-shadow: 0px 2px 2px 1px #ff656c;
-}
-.form-register{
-}
-/*------------------USER-REGISTER----------------------*/
-::-webkit-scrollbar {
-    width: 5px;
-}
- 
-/* Track */
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.3); 
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-}
- 
-/* Handle */
-::-webkit-scrollbar-thumb {
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    background: rgba(197,255,233,0.8); 
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
-}
-::-webkit-scrollbar-thumb:window-inactive {
-	background: rgba(197,255,233,0.4); 
-}
-
-/* --------------RESPONSIVE LAYOUT----------- */
 
 @media screen and (max-width : 992px){
-    .home-image{
-        height: 150px;
-    }
-    .house-suggest{
-        height: 150px;
-    }
-    h4.title-suggest{
-        font-size: 14px;
-    }
-    .radius-form{
-        font-size: 16px;
-    }
-    .table-estimate{
-        font-size: 16px;
-    }
-    p.h6{
-        font-size: 11px;
-    }
+
 }
 
 @media only screen and (max-width: 768px){
-    .map-utility > .angular-google-map > .angular-google-map-container{
-        height: 300px;
-    }
-    .table-estimate{
-        font-size: 13px;
-    }
-    .radius-form{
-        font-size: 15px;
-    }
-    .carousel-inner > .item > .img-carousel, .img-unknown{
-        height: 300px;
-        width: 100%;
-    }
-    .search{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 768px;
-    }
+
 }
 
 /*  480px hoặc nhỏ hơn */
 @media screen and (max-width: 480px) {
-    .home-image{
-        width:100%; 
-        height: 100px; 
-    }
-    .house-detail-info-suggest {
-        position: absolute;
-        bottom: 0;
-        left: 10px;
-    }
-    .house-suggest { 
-       position: relative; 
-       width: 100%; /* for IE 6 */
-       height: 100px;  
-    }
-    .carousel-inner > .item > .img-carousel, .img-unknown{
-        height: 200px;
-        width: 100%;
-    }
-     .angular-google-map-container {
-        width: 100%;
-        height: 200px;
-    }
-    .search{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 400px;
-    }
+
 }
 
 /* --------------RESPONSIVE LAYOUT----------- */
