add form vegetable

--- a/app/views/users/add-vegetable-form.template.html
+++ b/app/views/users/add-vegetable-form.template.html
@@ -4,8 +4,8 @@
 		<table>
 			<h3 class="h3-title">1. Số hiệu</h3>
 			<tr>
-				<td><label>Mã bảo tàng:</label></td>
-				<td><input type="text" name="maBaoTang" class="input-form"  required="required"></td>
+				<td><label>Mã bảo tàng(*):</label></td>
+				<td><input type="text" name="maBaoTang" class="input-form"  required></td>
 			</tr>
 			<tr>
 				<td><label>Số hiệu bảo tàng cơ sở:</label></td>
@@ -13,7 +13,7 @@
 			</tr>
 			<tr>
 				<td><label>Mã kí hiệu mẫu vật quốc tế:</label></td>
-				<td><input type="text" name="maKyHieuMauVatQuocTe" class="input-form"  required="required"></td>
+				<td><input type="text" name="maKyHieuMauVatQuocTe" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Số hiệu thực địa(*):</label></td>
@@ -337,7 +337,7 @@
 			</tr>
 			<tr>
 				<td><label>Tình trạng mẫu (*):</label></td>
-				<td><input type="text" name="tinhTrangMau" id="input" class="input-form"  value="" required></td>
+				<td><input type="text" name="tinhTrangMauBaoQuan" id="input" class="input-form"  value="" required></td>
 			</tr>
 			<tr>
 				<td><label>Trao đổi mẫu: </label></td>
