add ACL + fix form animal

--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -112,15 +112,15 @@
 			<h3 class="h3-title">3. Số lượng và chất lượng mẫu vật</h3>
 			<tr>
 				<td><label>Số lượng mẫu vật (*):</label></td>
-				<td><input type="text" name="soLuongMauVat" id="input" class="input-form"  value="" required></td>
+				<td><input type="number" name="soLuongMauVat" id="input" class="input-form"  value="" required></td>
 			</tr>
 			<tr>
 				<td><label>Số lượng tiêu bản (*):</label></td>
-				<td><input type="text" name="soLuongTieuBan" id="input" class="input-form"  value="" required></td>
+				<td><input type="number" name="soLuongTieuBan" id="input" class="input-form"  value="" required></td>
 			</tr>
 			<tr>
 				<td><label>Kích thước mẫu (*):</label></td>
-				<td><input type="text" name="kichThuocMau" id="input" class="input-form"  value="" required></td>
+				<td><input type="number" name="kichThuocMau" id="input" class="input-form"  value="" required></td>
 			</tr>
 			<tr>
 				<td><label>Loại mẫu (*):</label></td>
@@ -217,7 +217,7 @@
 			<h3 class="h3-title">5. NHÓM DỮ LIỆU PHÂN TÍCH MẪU</h3>
 			<tr>
 				<td><label>Thời gian phân tích/giám định/định loại mẫu:</label></td>
-				<td><input type="text" name="thoiGianPhanTich" id="input" class="input-form"  value=""></td>
+				<td><input type="date" name="thoiGianPhanTich" id="input" class="input-form"  value=""></td>
 			</tr>
 			<tr>
 				<td><label>Người phân tích/giám định/định loại mẫu (*):</label></td>
