use acl in animal.js

--- a/views/config.ejs
+++ b/views/config.ejs
@@ -4,6 +4,7 @@
 		<title>Config</title>
 	<% include header %>
 	</head>
+	<% include nav %>
 	<body>
 		<div class="container">
 			<div class="col-xs-12 col-sm-12 col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
