--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -363,7 +363,7 @@
 			</tr>
 			<tr>
 				<td><label>Tình trạng mẫu (*):</label></td>
-				<td><input type="text" name="tinhTrangMau" id="input" class="input-form"  value="" required></td>
+				<td><input type="text" name="tinhTrangMauBaoQuan" id="input" class="input-form"  value="" required></td>
 			</tr>
 			<tr>
 				<td><label>Trao đổi mẫu: </label></td>
