--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,7 +16,7 @@
 				<h1>Login</h1>
 			</div>
 			<div class="col-sm-12">
-				<form class="form" name="form" method="post">
+				<form class="form" name="form" method="post" onsubmit="handleSubmit()">
 					<div class="form-group">
 						<label>Email</label><input type="email" name="email" class="form-control" required="">
 					</div>
@@ -24,8 +24,8 @@
 						<label>Password</label><input id="password" type="password" name="password" class="form-control" required="">
 					</div>
 					<div>
-						<button class="btn btn-inverse btn-lg btn-login" type="button" onclick="handleSubmit()">Login</button>
-						<button class="btn btn-inverse btn-lg btn-login" type="submit" id="btnSubmit" style="display: none;">Login</button>
+						<!-- <button class="btn btn-inverse btn-lg btn-login" type="button" onclick="handleSubmit()">Login</button> -->
+						<button class="btn btn-inverse btn-lg btn-login" type="submit" id="btnSubmit">Login</button>
 						<a class="btn btn-default btn-lg btn-register" href="/auth/signup">Register</a>
 					</div>
 					<hr>
@@ -47,7 +47,7 @@
 								i++;
 							}
 							ob('password').value = plainPass;
-							$('#btnSubmit').click();
+							// $('#btnSubmit').click();
 						}
 					</script>
 				</form>
