--- a/views/config.ejs
+++ b/views/config.ejs
@@ -19,7 +19,8 @@
 									<form action="/config" id="<%= i %>" method="post" >
 										<div class="row">
 											<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-												<%= users[i].fullname %>
+												<h4><%= users[i].fullname %></h4>
+												<h5 class="text-info">(<%= users[i].username %>)</h5>
 												<input type="hidden" value="<%= i %>" name="userid" />
 											</div>
 											<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
