fix UI + exclude acl.json roles.json

--- a/views/log.ejs
+++ b/views/log.ejs
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Home</title>
+		<title>Log</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<% include header %>
 	</head>
 	</head>
 	<body>
-		<div class="container">
-			<% include nav %>
-		</div>
+		<% include nav %>
+		<h2>Log</h2>
 	</body>
 </html>
