--- a/views/log.ejs
+++ b/views/log.ejs
@@ -7,7 +7,30 @@
 	</head>
 	</head>
 	<body>
-		<% include nav %>
-		<h2>Log</h2>
+		<div class="container">
+			<% include nav %>
+			<h2>Log</h2>
+			<ul class="list-group">
+				<% for (var i = 0; i < logs.length; i++) { %>
+					<li class="list-group-item">
+						<div class="row">
+							<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+								<% var date = (new Date(logs[i].time)).toLocaleString(); %>
+								<h4><%= (date != 'Invalid Date') ? date : '' %></h4>
+							</div>
+							<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+								<h4><%= logs[i].userFullName %></h4>
+							</div>
+							<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+								<h4><%= logs[i].action %></h4>
+							</div>
+							<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+								<h4><%= logs[i].objType %></h4>
+							</div>
+						</div>
+					</li>
+				<% } %>
+			</ul>
+		</div>
 	</body>
 </html>
