--- a/views/log.ejs
+++ b/views/log.ejs
@@ -25,7 +25,7 @@
 								<h4><%= logs[i].action %></h4>
 							</div>
 							<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-								<h4><%= logs[i].objType %></h4>
+								<a href="/content/dong-vat/<%= logs[i].obj1._id %>"><h4><%= logs[i].objType %></h4></a>
 							</div>
 						</div>
 					</li>
