--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,6 +9,7 @@
 	<body>
 		<div class="container">
 			<% include nav %>
+			<h2 class="text-success">Click <a href="/app">here</a> to view demo form</h2>
 		</div>
 	</body>
 </html>
