Fix home, add test account

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,6 +10,7 @@
 		<div class="container">
 			<% include nav %>
 			<h2 class="text-success">Click <a href="/app">here</a> to view demo form</h2>
+			<h5 class="text-danger">If after clicking the above link, you are redirected back to here, contact <a href="mailto:ngocdon127@gmail.com">admin</a> to upgrade your account.</h5>
 		</div>
 	</body>
 </html>
