--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,8 +9,8 @@
 	<body>
 		<div class="container">
 			<% include nav %>
-			<h2 class="text-success">Click <a href="/app">here</a> to view demo form</h2>
-			<h5 class="text-danger">If after clicking the above link, you are redirected back to here, contact <a href="mailto:ngocdon127@gmail.com">admin</a> to upgrade your account.</h5>
+			<h2 class="text-success">Bấm <a href="/app">Nhập liệu</a> để nhập liệu</h2>
+			<h5 class="text-danger">Nếu sau khi bấm vào liên kết trên, bạn được chuyển hướng lại chính trang này, liên hệ <a href="mailto:ngocdon127@gmail.com">ngocdon127@gmail.com</a> để cập nhật quyền hạn cho tài khoản của bạn.</h5>
 		</div>
 	</body>
 </html>
