--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
 			<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
 			<div class="container-fluid">
 				<div class="col-sm-12">
-					<h1>Login</h1>
+					<h1>Đăng nhập</h1>
 				</div>
 				<div class="col-sm-12">
 					<form class="form" name="form" method="post" onsubmit="handleSubmit()">
@@ -22,12 +22,11 @@
 							<label>Email</label><input type="email" name="email" class="form-control" required="">
 						</div>
 						<div class="form-group">
-							<label>Password</label><input id="password" type="password" name="password" class="form-control" required="">
+							<label>Mật khẩu</label><input id="password" type="password" name="password" class="form-control" required="">
 						</div>
 						<div>
 							<!-- <button class="btn btn-inverse btn-lg btn-login" type="button" onclick="handleSubmit()">Login</button> -->
-							<button class="btn btn-inverse btn-lg btn-login" type="submit" id="btnSubmit">Login</button>
-							<a class="btn btn-default btn-lg btn-register" href="/auth/signup">Register</a>
+							<button class="btn btn-inverse btn-lg btn-login" type="submit" id="btnSubmit">Đăng nhập</button>
 						</div>
 						<hr>
 						<% if (message) { %>
