--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,28 +7,28 @@
 	</head>
 	</head>
 	<body>
+	<div class="container">
 		<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
 		<% include nav %>
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
 		<div class="container-fluid">
 			<div class="col-sm-12">
-				<h1>Sign up</h1>
+				<h1>Đăng ký tài khoản</h1>
 			</div>
 			<div class="col-sm-12">
 				<form class="form" name="form" method="post" onsubmit="handleRegister()">
 					<div class="form-group" >
-						<label>Full Name</label><input name="fullname" class="form-control" required="">
+						<label>Họ tên</label><input name="fullname" class="form-control" required="">
 					</div>
 					<div class="form-group" >
 						<label>Email</label><input type="email" name="email" class="form-control" required="">
 					</div>
 					<div class="form-group">
-						<label>Password</label><input type="password" name="password" id="password" class="form-control">
+						<label>Mật khẩu</label><input type="password" name="password" id="password" class="form-control">
 					</div>
 					<div>
-						<button class="btn btn-inverse btn-lg btn-login" type="submit" id="btnSubmit">Sign up</button>
-						<a class="btn btn-default btn-lg btn-register" href="/auth/login">Login</a>
+						<button class="btn btn-inverse btn-lg btn-login" type="submit" id="btnSubmit">Đăng ký</button>
 					</div>
 					<hr>
 					<% if (message) { %>
@@ -55,6 +55,7 @@
 				</form>
 			</div>
 			<hr>
+		</div>
 		</div>
 		</div>
 	</body>
