--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,19 +12,21 @@
 			<% include nav %>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
-			<div class="container-fluid">
+			
 				<div class="col-sm-12">
 					<h1>Đăng nhập</h1>
 				</div>
 				<div class="col-sm-12">
 					<form class="form" name="form" method="post" onsubmit="handleSubmit()">
-						<div class="form-group">
-							<label>Email</label><input type="email" name="email" class="form-control" required="">
+						<div class="row">
+							<label for="email">Email</label>
+							<input type="email" name="email" class="form-control" required="">
 						</div>
-						<div class="form-group">
-							<label>Mật khẩu</label><input id="password" type="password" name="password" class="form-control" required="">
+						<div class="row">
+							<label for="password">Mật khẩu</label>
+							<input id="password" type="password" name="password" class="form-control" required="">
 						</div>
-						<div>
+						<div class="row">
 							<!-- <button class="btn btn-inverse btn-lg btn-login" type="button" onclick="handleSubmit()">Login</button> -->
 							<button class="btn btn-inverse btn-lg btn-login" type="submit" id="btnSubmit">Đăng nhập</button>
 						</div>
@@ -53,7 +55,6 @@
 					</form>
 				</div>
 				<hr>
-			</div>
 			</div>
 		</div>
 	</body>
