--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,13 +7,17 @@
 	</head>
 	</head>
 	<body>
-		<div class="container">
-			<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
-			<% include nav %>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
+					<% include nav %>
+				</div>
 			</div>
-			<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
-			<h2 class="text-success">Bấm <a href="/app">Nhập liệu</a> để nhập liệu</h2>
-			<h5 class="text-danger">Nếu sau khi bấm vào liên kết trên, bạn được chuyển hướng lại chính trang này, liên hệ <a href="mailto:ngocdon127@gmail.com">ngocdon127@gmail.com</a> để cập nhật quyền hạn cho tài khoản của bạn.</h5>
+			<div class="row">
+				<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
+					<h2 class="text-success">Bấm <a href="/app">Nhập liệu</a> để nhập liệu</h2>
+					<h5 class="text-danger">Nếu sau khi bấm vào liên kết trên, bạn được chuyển hướng lại chính trang này, liên hệ <a href="mailto:ngocdon127@gmail.com">ngocdon127@gmail.com</a> để cập nhật quyền hạn cho tài khoản của bạn.</h5>
+				</div>
 			</div>
 		</div>
 	</body>
